syntax = "proto3";

package user;

message GetLevelRequest {
    string userId = 1;
}

message GetLevelResponse {
    int32 level = 1;
    int32 experiences = 2;
    int32 experienceQuota = 3;
}

message AddExperiencesRequest {
    string userId = 1;
    int32 experiences = 2;
}